--- a/src/Component/GetIntent/getdata.css
+++ b/src/Component/GetIntent/getdata.css
@@ -250,6 +250,32 @@ p {
 .btdb2 {
   width: 150px;
 }
+.sendfire {
+  margin-right: 15px;
+  height: 40px;
+  border-radius: 20% !important;
+}
+.btgoogle {
+  position: absolute;
+  right: 0;
+  margin-bottom: 5px;
+  margin-right: 40px;
+}
+.googlebt {
+  background-color: white;
+  width: 55px;
+  height: 40px;
+  border-radius: 10px;
+  border: none !important;
+}
+.googlebt:hover {
+  background-color: rgb(243, 243, 243);
+}
+.picgoogle {
+  width: 25px;
+  height: 25px;
+}
+
 @media only screen and (max-width: 1200px) {
   .text-cont-pageadmin2 {
     margin-top: 30px;
@@ -434,5 +460,29 @@ p {
     width: 100% !important;
     height: 40px !important;
     font-size: 12px !important;
+  }
+  .btgoogle {
+    position: absolute;
+    margin-bottom: 5px;
+    margin-right: 15px;
+  }
+  .sendfire {
+    margin-right: 10px;
+    height: 25px;
+    width: 30px;
+    padding: 0px !important;
+  }
+  .icon-nav {
+    font-size: 15px !important;
+  }
+  .googlebt {
+    position: relative;
+    width: 30px;
+    height: 25px;
+    border-radius: 5px;
+  }
+  .picgoogle {
+    width: 15px;
+    height: 15px;
   }
 }
